cmake_minimum_required(VERSION 3.16)
project(MCServerManager VERSION 1.0.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)
set(CMAKE_AUTOUIC ON)

find_package(Qt6 REQUIRED COMPONENTS Widgets Core Network Svg)

# ── UIC: .ui files ──
set(UI_FILES
    ui/MainWindow.ui
    ui/ServerListPanel.ui
    ui/CreateWizard.ui
    ui/ServerDetailPanel.ui
    ui/SettingsDialog.ui
    ui/JavaPanel.ui
    ui/ModManagerPanel.ui
    ui/ModpackPanel.ui
    ui/PlayerWorldPanel.ui
)
# Tell AUTOUIC where to find .ui files
set(CMAKE_AUTOUIC_SEARCH_PATHS ${CMAKE_CURRENT_SOURCE_DIR}/ui)

# ── Resource files ──
set(RESOURCES
    resources.qrc
)

# ── Source files ──
set(SOURCES
    main.cpp
    models/ServerConfig.h
    core/AppSettings.h
    core/AppSettings.cpp
    core/ConfigStore.h
    core/ConfigStore.cpp
    core/ServerProcess.h
    core/ServerProcess.cpp
    core/DownloadManager.h
    core/DownloadManager.cpp
    core/WebApiServer.h
    core/WebApiServer.cpp
    core/WebUiPage.h
    core/PluginInterface.h
    core/ServerProperties.h
    core/LanguageManager.h
    core/LanguageManager.cpp
    core/Watchdog.h
    core/Watchdog.cpp
    core/JavaManager.h
    core/JavaManager.cpp
    core/ModManager.h
    core/ModManager.cpp
    core/ModpackImporter.h
    core/ModpackImporter.cpp
    core/PlayerManager.h
    core/PlayerManager.cpp
    core/WorldManager.h
    core/WorldManager.cpp
    gui/Theme.h
    gui/MainWindow.h
    gui/MainWindow.cpp
    gui/ServerListPanel.h
    gui/ServerListPanel.cpp
    gui/CreateWizard.h
    gui/CreateWizard.cpp
    gui/ServerDetailPanel.h
    gui/ServerDetailPanel.cpp
    gui/SettingsDialog.h
    gui/SettingsDialog.cpp
    gui/ModManagerPanel.h
    gui/ModManagerPanel.cpp
    gui/ModpackPanel.h
    gui/ModpackPanel.cpp
    gui/PlayerWorldPanel.h
    gui/PlayerWorldPanel.cpp
    gui/JavaPanel.h
    gui/JavaPanel.cpp
    ${UI_FILES}
    ${RESOURCES}
)

add_executable(${PROJECT_NAME} ${SOURCES})

target_link_libraries(${PROJECT_NAME} PRIVATE
    Qt6::Widgets
    Qt6::Network
    Qt6::Core
    Qt6::Svg
    dwmapi          # Windows DWM 阴影（无边框窗口）
)

# MinGW: -mwindows 设置 Windows GUI 子系统，彻底去掉控制台（零闪过）
target_link_options(${PROJECT_NAME} PRIVATE -mwindows)

target_include_directories(${PROJECT_NAME} PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}
    ${CMAKE_CURRENT_BINARY_DIR}   # for ui_*.h generated by UIC
)
